--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -1,60 +1,118 @@
 /*
-	Read Only by HTML5 UP
+	Tessellate by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
 /* Basic */
 
-	code,
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	select,
-	textarea,
-	.box,
-	.image,
-	.image img,
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
+	.image {
+		position: relative;
+		-ms-behavior: url("assets/js/ie/PIE.htc");
+	}
+
+		.image img {
+			position: relative;
+			-ms-behavior: url("assets/js/ie/PIE.htc");
+		}
+
 	.button {
 		position: relative;
 		-ms-behavior: url("assets/js/ie/PIE.htc");
 	}
 
+/* Section/Article */
+
+	section > .last-child,
+	article > .last-child,
+	section.last-child,
+	article.last-child {
+		margin-bottom: 0;
+	}
+
+/* List */
+
+	ul.icons a {
+		position: relative;
+		-ms-behavior: url("assets/js/ie/PIE.htc");
+		border: solid 1px #ddd;
+	}
+
 /* Form */
 
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	select {
-		line-height: 2.75em;
+	form input.text,
+	form select,
+	form .select,
+	form textarea {
+		position: relative;
+		-ms-behavior: url("assets/js/ie/PIE.htc");
+		border: solid 1px #ddd;
+		line-height: 1.25em;
 	}
 
-	input[type="checkbox"],
-	input[type="radio"] {
-		-moz-appearance: normal;
-		-webkit-appearance: normal;
-		-ms-appearance: normal;
-		appearance: normal;
+	form select {
+		position: relative;
 	}
 
-		input[type="checkbox"] + label,
-		input[type="radio"] + label {
-			padding: 0 0 0 1.5em;
+		form select option {
+			color: #000;
 		}
 
-			input[type="checkbox"] + label:before,
-			input[type="radio"] + label:before {
-				display: none;
-			}
+	form .select select {
+		width: 100%;
+	}
+
+	form .select:before {
+		display: none;
+	}
 
 /* Button */
 
-	input[type="submit"].alt,
-	input[type="reset"].alt,
-	input[type="button"].alt,
 	.button.alt {
-		border: solid 2px #e4e4e4;
+		border: solid 1px #ddd;
+	}
+
+/* Feature Icon */
+
+	.feature-icon {
+		padding-bottom: 0;
+	}
+
+		.feature-icon:before, .feature-icon:after {
+			display: none;
+		}
+
+		.feature-icon .icon {
+			position: relative;
+			-ms-behavior: url("assets/js/ie/PIE.htc");
+			background: #fff;
+		}
+
+			.feature-icon .icon:before {
+				font-size: 6em;
+				color: #3d3d3d;
+			}
+
+/* Header */
+
+	#header {
+		background-image: url("../../images/header.jpg");
+		background-size: cover;
+		background-position: auto;
+		background-repeat: no-repeat;
+		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
+	}
+
+/* Main Sections */
+
+	.main > .content.style1 {
+		filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#412e4c, endColorstr=#a56365);
+	}
+
+	.main > .content.style2 {
+		filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#85505f, endColorstr=#384955);
+	}
+
+	.main > .content.style3 {
+		filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#2f394e, endColorstr=#5f796b);
 	}
