--- a/assets/sass/ie8.scss
+++ b/assets/sass/ie8.scss
@@ -1,48 +1,74 @@
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
-@import 'libs/skel';
 
 /*
-	Read Only by HTML5 UP
+	Tessellate by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
 /* Basic */
 
-	code,
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	select,
-	textarea,
-	.box,
-	.image,
-	.image img,
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
+	.image {
+		position: relative;
+		-ms-behavior: url('assets/js/ie/PIE.htc');
+
+		img {
+			position: relative;
+			-ms-behavior: url('assets/js/ie/PIE.htc');
+		}
+	}
+
 	.button {
 		position: relative;
 		-ms-behavior: url('assets/js/ie/PIE.htc');
 	}
 
-/* Form */
+/* Section/Article */
 
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	select {
-		line-height: _size(element-height);
+	section > .last-child,
+	article > .last-child,
+	section.last-child,
+	article.last-child {
+		margin-bottom: 0;
 	}
 
-	input[type="checkbox"],
-	input[type="radio"] {
-		@include vendor('appearance', 'normal');
+/* List */
 
-		& + label {
-			padding: 0 0 0 1.5em;
+	ul.icons {
+		a {
+			position: relative;
+			-ms-behavior: url('assets/js/ie/PIE.htc');
+			border: solid 1px #ddd;
+		}
+	}
+
+/* Form */
+
+	form {
+		input.text,
+		select,
+		.select,
+		textarea {
+			position: relative;
+			-ms-behavior: url('assets/js/ie/PIE.htc');
+			border: solid 1px #ddd;
+			line-height: 1.25em;
+		}
+
+		select {
+			position: relative;
+
+			option {
+				color: #000;
+			}
+		}
+
+		.select {
+			select {
+				width: 100%;
+			}
 
 			&:before {
 				display: none;
@@ -52,11 +78,58 @@
 
 /* Button */
 
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
 	.button {
 		&.alt {
-			border: solid _size(border-width) _palette(border2);
+			border: solid 1px #ddd;
+		}
+	}
+
+/* Feature Icon */
+
+	.feature-icon {
+		padding-bottom: 0;
+
+		&:before,
+		&:after {
+			display: none;
+		}
+
+		.icon {
+			position: relative;
+			-ms-behavior: url('assets/js/ie/PIE.htc');
+			background: #fff;
+
+			&:before {
+				font-size: 6em;
+				color: #3d3d3d;
+			}
+		}
+	}
+
+/* Header */
+
+	#header {
+		background-image: url('../../images/header.jpg');
+		background-size: cover;
+		background-position: auto;
+		background-repeat: no-repeat;
+		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
+	}
+
+/* Main Sections */
+
+	.main {
+		> .content {
+			&.style1 {
+				filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#412e4c, endColorstr=#a56365);
+			}
+
+			&.style2 {
+				filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#85505f, endColorstr=#384955);
+			}
+
+			&.style3 {
+				filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#2f394e, endColorstr=#5f796b);
+			}
 		}
 	}
