--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,11 @@
 
 /* Reset */
 
+@font-face {
+	font-family: btscript;
+	src: url(../fonts/Better_Together_Script.ttf);
+}
+
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 		margin: 0;
 		padding: 0;
@@ -1726,7 +1731,7 @@
 	}
 
 	header.major h2 {
-		color: #FE0000;
+		color: #41B896;
 		font-size: 3.5em;
 	}
 
@@ -2092,7 +2097,7 @@
 				}
 
 				ul.feature-icons li:before {
-					background: #FE0000;
+					background: #41B896;
 					border-radius: 100%;
 					color: #ffffff;
 					display: block;
@@ -2461,7 +2466,7 @@
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #FFC600;
+		background: #41B896;
 		color: #d1f1e9;
 		height: 100%;
 		overflow-y: auto;
